<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tech.anthonyquiroz.yoursize.IMCActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:text="@string/texto_IMC"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/texto_valor_IMC"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />


        <ProgressBar
            android:id="@+id/pgBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:progressTint="@color/colorPrimaryDark" />


        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:scaleType="fitXY"
             />

        <TextView
            android:id="@+id/observacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textAlignment="center"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/tv_recomendacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recomendacion"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/recomendacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_pesoideal_titulo"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:text="Peso ideal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_pesoideal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_toRightOf="@+id/textView30"
            android:onClick="volverOnClick"
            android:text="@string/boton_volver" />

    </LinearLayout>


</ScrollView>
